# askr

./: CMakeLists.txt  README.md
askr/: CMakeLists.txt
askr/log/: CMakeLists.txt  log.h  logger.cpp  logger.h  setup.h
askr/log/detail/: setup.h
askr/log/test/: CMakeLists.txt  log_unittest.cpp  unittest_main.cpp
askr/meta/: CMakeLists.txt  function_traits.h  type_traits.h
askr/meta/test/: CMakeLists.txt  function_traits_unittest.cpp  unittest_main.cpp
askr/utility/: CMakeLists.txt  auto_timer.cpp  auto_timer.h  base64.cpp  base64.h  crc.h  expected.h  hash.h  ioc_container.cpp  ioc_container.h  murmurhash.cpp  murmurhash.h  random.cpp  random.h  span.h  string.cpp  string.h  uri.cpp  uri.h
askr/utility/detail/: auto_timer.h  base64.cpp  base64.h  crc_table.h  ioc_container.h  string.h
askr/utility/test/: CMakeLists.txt  crc_unittest.cpp  expected_unittest.cpp  hash_unittest.cpp  ioc_unittest.cpp  random_unittest.cpp  span_unittest.cpp  string_unittest.cpp  uri_unittest.cpp
scripts/: format.sh
